Add multi key values filter
